<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="e.joepassanante.tictactoeassignment.HomeScreen"
    android:columnCount="2"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    >
    <TextView
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appTitle"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:paddingTop="10dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appinfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@android:color/black"
        android:layout_row="2"
        android:layout_columnSpan="1"
        android:layout_column="0"
        android:text="@string/enterName"
        android:textSize="18sp"
        android:paddingTop="10dp"
        />

    <EditText
        android:id="@+id/usernameone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        />

    <TextView
        android:id="@+id/usernametexttwo"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="3"
        android:enabled="false"
        android:paddingTop="10dp"
        android:text="@string/enterName"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="invisible" />
    <EditText
        android:id="@+id/usernametwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:visibility="invisible" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:paddingBottom="30dp"
        android:text="@string/switchmode"
        android:textSize="18sp"
        tools:checked="false" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="5"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="onClickPlay"
        android:text="@string/playgame" />


</GridLayout>
